text highlighting pills that maintain the same text width to avoid text jumping around when highlighting

--- a/client/stylesheets/dash.styl
+++ b/client/stylesheets/dash.styl
@@ -51,10 +51,11 @@
   .label
     background-color #444
     float left
-    padding 3px
-    margin 1px 5px
+    margin 1px 5px 8px
     cursor pointer
     font-size 1.2em
+    padding 0
+    font-weight normal
 
 .pane-container
   flex 1 1 auto
